# pg-debugger

./: .gitignore  Cargo.toml  README.md  claude.md  example  example.c  sub.h
.github/workflows/: release.yml
src/: app.rs  compiler.rs  gdb_utils.rs  main.rs
src/debugger/: gdb.rs  mod.rs  types.rs
src/ui/: console_view.rs  mod.rs  source_view.rs  status_bar.rs  var_view.rs
